# OpenFFBoard

./: .cproject  .gitignore  .gitmodules  .project  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OpenFFBoard Debug.launch  OpenFFBoard.ioc  README.md  STM32F411RETX_FLASH.ld  STM32F411RETX_RAM.ld
.github/: FUNDING.yml
Firmware/: .cproject  .editorconfig  .gitignore  .project  CMakeLists.txt  Makefile  OpenFFBoard.ioc  make_windows.ps1  memory_map.xlsx  standard_c_nano_cpp.specs
Firmware/Targets/ESP32SX/main/: CMakeLists.txt  app_main.c  cmsis_os.h  cpp_target_config.cpp  glue.c  glue.h  glue_stm32f4xx_hal_spi.h  main.h  openffboard_esp32s2_v1.0_pins.h  openffboard_esp32s2_v1.1_pins.h  openffboard_esp32s3_v1.1_pins.h  stm32f4xx_hal.h  target_constants.h
Inc/: AdcHandler.h  ButtonSource.h  ClassChooser.h  CmdParser.h  CommandHandler.h  Encoder.h  EncoderLocal.h  ExtiHandler.h  Filters.h  HidFFB.h  LocalButtons.h  MotorDriver.h  MotorPWM.h  PersistentStorage.h  SPIButtons.h  ShifterAnalog.h  ShifterG29.h  TMC4671.h  TimerHandler.h  UartHandler.h  UsbHidHandler.h  cmdparser.h  constants.h  cppmain.h  eeprom.h  ffb_defs.h  flash_helpers.h  global_callbacks.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  voltagesense.h
Src/: AdcHandler.cpp  ButtonSource.cpp  ChoosableClass.cpp  CommandHandler.cpp  Encoder.cpp  EncoderLocal.cpp  ExtiHandler.cpp  Filters.cpp  HidFFB.cpp  LocalButtons.cpp  MotorDriver.cpp  MotorPWM.cpp  SPIButtons.cpp  ShifterAnalog.cpp  ShifterG29.cpp  TMC4671.cpp  TimerHandler.cpp  UartHandler.cpp  UsbHidHandler.cpp  cmdparser.cpp  cppmain.cpp  eeprom.c  (+5 more)
(+3476 files in other folders)
